--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,11 @@ jupyter>=1.0.0
 notebook>=6.0.0
 ipykernel>=6.0.0
 alpha_vantage>=2.3.1
+torch>=2.1.0
+transformers>=4.36.0
+datasets>=2.16.0
+peft>=0.7.0
+bitsandbytes>=0.41.0
 
 # Optional dependencies
 # MetaTrader5 is only available on Windows
