--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ include LICENSE
 include README.md
 include requirements.txt
 include pyproject.toml
-recursive-include quantlib *.py 
+recursive-include finpie *.py 
